A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 216:
----------------
* A new win32com.client.VARIANT object can be used for advanced control over
  the parameter types passed to some COM methods.  See the documentation in
  win32com/HTML/variant.html (also included in the help file)

* The win32com.adsi and win32com.mapi packages have been upgraded to work on
  Python 3.x and as a result, there is a slight risk that regressions to
  these packages have been introduced in the Python 2.x versions.  Please
  file a bug if any problems are found.

* Pythonwin now warns, but allows you to continue, when saving a file with
  an invalid encoding line (bug 3139486)

* Fix win32com.client.WithEvents on py3k (bug bug 3199843)

* When passing integers/unsigned integers to COM objects which did not fit 
  into 32bits, OverflowErrors were silently discarded and -1 was silently 
  passed.  This has been fixed for signed integers (an OverflowError is now 
  raised) and unsigned integers now allow for values with the high-bit set to 
  be passed correctly.

* Fix win32com.client.WithEvents() on py3k.

* makepy may have generated syntax errors if 'helpstring' elements in typelibs
  had strange quoting or slashes (bug 3199631)

* Fixed that in some cases win32file.GetOpenFileName and GetSaveFileName 
  could have returned trailing garbage after an embedded NULL character.
  (bug 3277647)

* Some functions which accepted a DWORD did not accept long integers which
  fit in 32bits with the most signficant bit set (eg, 0x80000000).

* Source-code management moved from CVS to Mercurual.

* win32com.shell - Added SHCreateShellItem

* win32evtlog - Added some of the new event log functions introduced in Vista/Windows 7

* win32service - Added EnumServicesStatusEx, and support startup type "delayed"